@@ -6,6 +6,7 @@ interface:
 features:
 - constraint handler can now register their upgrade functions for quadratic constraints to the
   constraint handler for quadratic constraints (similar to LINCONSUPGD)
+- added branchcands for relaxator solution, that can be added by the relaxator and used by branching rules
 
 performance improvements:
 
